--- a/qr-code-component/src/index.pug
+++ b/qr-code-component/src/index.pug
@@ -7,10 +7,8 @@ html(lang="en")
     link(rel="icon", type="image/png", sizes="32x32", href="./images/favicon-32x32.png")
     link(rel="stylesheet", href="styles.css")
   body 
-    p Improve your front-end skills by building projects Scan the QR code to visit
-    p Frontend Mentor and take your coding skills to the next level
-
-    .attribution 
-      p(class="attribution__by") Challenge by 
-      a(class="attribution__by", href="https://www.frontendmentor.io?ref=challenge", target="_blank") Frontend Mentor. 
-      a(href="https://www.github.com/maxelonej", target="_blank") Coded by maxelonej
+    .content 
+      img.content__qr(src="/qr-code-component/images/image-qr-code.png", alt="FrontendMentor QR code")
+      .content__description
+        h3.content__description__header Improve your front-end skills by building projects
+        p.content__description__text Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
