--- a/qr-code-component/src/styles.sass
+++ b/qr-code-component/src/styles.sass
@@ -1,12 +1,37 @@
+// color
 $slate-900: #1f314f
-$transition: .4s ease-in-out
+$slate-500: #68778d
+$slate-300: #d5e1ef
+$white: #fff
 $blue: hsl(228, 45%, 40%)
 
-*
-  font-size: 21px
-  text-align: center
-  margin: 0
-  padding: 0
+// typography
+$font-outfit-bold: 'Outfit', sans-serif
+$font-outfit-regular: 'Outfit', sans-serif
+
+%header
+  font:
+    family: $font-outfit-bold,
+    size: 22px,
+    weight: bold
+  line-height: 120%,
+  letter-spacing: 0px
+  color: $slate-900
+
+%text
+  font:
+    family: $font-outfit-regular,
+    size: 15px,
+  line-height: 140%,
+  letter-spacing: 0.2px
+  color: $slate-500
+
+// spacing
+  $spacing-500: 40px
+  $spacing-300: 24px
+  $spacing-200: 16px
+
+  $transition: .4s ease-in-out
 
 body
   display: flex
@@ -15,24 +40,34 @@ body
   justify-content: center
   height: 100dvh
   margin: 0
-  color: snow
-  background: black
+  color: $slate-900
+  background: $slate-300
 
-.attribution
-  &__by
-    display: inline
+.content
+  background: $white
+  padding: 16px
+  border-radius: 20px
+  box-shadow: 0px 25px 25px 0px rgba(0, 0, 0, 0.0477)
 
-  a
-    color: $blue
-    text-decoration: none
-    border-bottom: 2px solid transparent
-    transition: $transition
+  &__description
+    display: flex
+    flex-direction: column
+    gap: 16px
+    margin-top: 24px
+    margin-bottom: 40px
+    text-align: center
+    width: 288px
 
-  a:hover
-    color: $blue
-    border-bottom: 2px solid $blue
+    > *
+      margin: 0
 
-  a:not([class])
-    display: block
-    width: fit-content
-    margin-inline: auto
+    &__header
+      @extend %header
+
+    &__text
+      @extend %text
+
+  &__qr
+    width: 288px
+    height: 288px
+    border-radius: 10px
