--- a/qr-code-component/styles.css
+++ b/qr-code-component/styles.css
@@ -1,8 +1,18 @@
-* {
-  font-size: 21px;
-  text-align: center;
-  margin: 0;
-  padding: 0;
+.content__description__header {
+  font-family: "Outfit", sans-serif;
+  font-size: 22px;
+  font-weight: bold;
+  line-height: 120%;
+  letter-spacing: 0px;
+  color: #1f314f;
+}
+
+.content__description__text {
+  font-family: "Outfit", sans-serif;
+  font-size: 15px;
+  line-height: 140%;
+  letter-spacing: 0.2px;
+  color: #68778d;
 }
 
 body {
@@ -12,26 +22,30 @@ body {
   justify-content: center;
   height: 100dvh;
   margin: 0;
-  color: snow;
-  background: black;
+  color: #1f314f;
+  background: #d5e1ef;
 }
 
-.attribution__by {
-  display: inline;
+.content {
+  background: #fff;
+  padding: 16px;
+  border-radius: 20px;
+  box-shadow: 0px 25px 25px 0px rgba(0, 0, 0, 0.0477);
 }
-.attribution a {
-  color: hsl(228, 45%, 40%);
-  text-decoration: none;
-  border-bottom: 2px solid transparent;
-  transition: 0.4s ease-in-out;
+.content__description {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  margin-top: 24px;
+  margin-bottom: 40px;
+  text-align: center;
+  width: 288px;
 }
-.attribution a:hover {
-  color: hsl(228, 45%, 40%);
-  border-bottom: 2px solid hsl(228, 45%, 40%);
+.content__description > * {
+  margin: 0;
 }
-.attribution a:not([class]) {
-  display: block;
-  width: -moz-fit-content;
-  width: fit-content;
-  margin-inline: auto;
+.content__qr {
+  width: 288px;
+  height: 288px;
+  border-radius: 10px;
 }/*# sourceMappingURL=styles.css.map */
