--- a/qr-code-component/src/styles.sass
+++ b/qr-code-component/src/styles.sass
@@ -5,6 +5,14 @@ $slate-300: #d5e1ef
 $white: #fff
 $blue: hsl(228, 45%, 40%)
 
+// spacing
+$spacing-500: 40px
+$spacing-300: 24px
+$spacing-200: 16px
+
+// animations
+$transition: .4s ease-in-out
+
 // typography
 $font-outfit-bold: 'Outfit', sans-serif
 $font-outfit-regular: 'Outfit', sans-serif
@@ -25,13 +33,6 @@ $font-outfit-regular: 'Outfit', sans-serif
   line-height: 140%,
   letter-spacing: 0.2px
   color: $slate-500
-
-// spacing
-  $spacing-500: 40px
-  $spacing-300: 24px
-  $spacing-200: 16px
-
-  $transition: .4s ease-in-out
 
 body
   display: flex
