Add font by link href google fonts

--- a/qr-code-component/src/index.pug
+++ b/qr-code-component/src/index.pug
@@ -6,6 +6,7 @@ html(lang="en")
     title Frontend Mentor | QR code component
     link(rel="icon", type="image/png", sizes="32x32", href="./images/favicon-32x32.png")
     link(rel="stylesheet", href="styles.css")
+    link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap")
   body 
     .content 
       img.content__qr(src="/qr-code-component/images/image-qr-code.png", alt="FrontendMentor QR code")
