Update classnames, change div to section

--- a/frontendmentor/qr-code-component/src/index.pug
+++ b/frontendmentor/qr-code-component/src/index.pug
@@ -8,8 +8,8 @@ html(lang="en")
     link(rel="stylesheet", href="styles.css")
     link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap")
   body 
-    .content 
-      img.content__qr(src="images/image-qr-code.png", alt="FrontendMentor QR code")
-      .content__description
-        h3.content__description__header Improve your front-end skills by building projects
-        p.content__description__text Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+    section.qr 
+      img.qr__img(src="images/image-qr-code.png", alt="FrontendMentor QR code")
+      .qr__description
+        h1.qr__description__header Improve your front-end skills by building projects
+        p.qr__description__text Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
