--- a/frontendmentor/qr-code-component/src/styles.sass
+++ b/frontendmentor/qr-code-component/src/styles.sass
@@ -44,11 +44,16 @@ body
   color: $slate-900
   background: $slate-300
 
-.content
+.qr
   background: $white
   padding: 16px
   border-radius: 20px
   box-shadow: 0px 25px 25px 0px rgba(0, 0, 0, 0.0477)
+
+  &__img
+    width: 288px
+    height: 288px
+    border-radius: 10px
 
   &__description
     display: flex
@@ -67,8 +72,3 @@ body
 
     &__text
       @extend %text
-
-  &__qr
-    width: 288px
-    height: 288px
-    border-radius: 10px
