Add more semantic tags

--- a/frontendmentor/qr-code-component/src/index.pug
+++ b/frontendmentor/qr-code-component/src/index.pug
@@ -4,12 +4,17 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Frontend Mentor | QR code component
-    link(rel="icon", type="image/png", sizes="32x32", href="./images/favicon-32x32.png")
+    link(rel="icon", type="image/png", sizes="32x32", href="images/favicon-32x32.png")
     link(rel="stylesheet", href="styles.css")
     link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap")
   body 
-    section.qr 
-      img.qr__img(src="images/image-qr-code.png", alt="FrontendMentor QR code")
-      .qr__description
-        h1.qr__description__header Improve your front-end skills by building projects
-        p.qr__description__text Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+    header 
+
+    main
+      section.qr 
+        img.qr__img(src="images/image-qr-code.png", alt="FrontendMentor QR code")
+        .qr__description
+          h1.qr__description__header Improve your front-end skills by building projects
+          p.qr__description__text Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+
+    footer
