--- a/frontendmentor/qr-code-component/src/index.pug
+++ b/frontendmentor/qr-code-component/src/index.pug
@@ -14,7 +14,7 @@ html(lang="en")
       section.qr 
         img.qr__img(src="images/image-qr-code.png", alt="FrontendMentor QR code")
         .qr__description
-          h1.qr__description__header Improve your front-end skills by building projects
-          p.qr__description__text Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+          h1.qr__description-title Improve your front-end skills by building projects
+          p.qr__description-description Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
 
     footer
