--- a/frontendmentor/qr-code-component/src/styles.sass
+++ b/frontendmentor/qr-code-component/src/styles.sass
@@ -67,8 +67,8 @@ body
     > *
       margin: 0
 
-    &__header
+    &-title
       @extend %header
 
-    &__text
+    &-description
       @extend %text
